# api/v1/api/server.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"sync"
 	"time"
 
 	models "github.com/aitrailblazer/ait-gcp-go-grpc/api/v1/models"
@@ -13,16 +14,52 @@ import (
 
 const VERSION = "1.02"
 
-type Handler struct{}
+// This function wraps sending of an error in the Error format, and
+// handling the failure to marshal that.
+func sendPetStoreError(ctx echo.Context, code int, message string) error {
+	code32 := int32(code)
+	petErr := models.Error{
+		Code:    &code32,
+		Message: &message,
+	}
+	err := ctx.JSON(code, petErr)
+	return err
+}
 
-func NewHandler() Handler {
-	// pong := Pong{
-	// 	Index:      1,
-	// 	Message:    "Pong!",
-	// 	ReceivedOn: time.Now(),
-	// }
-	handler := Handler{}
-	return handler
+type PetStore struct {
+	Lock   sync.Mutex
+	Pets   map[int64]models.Pet
+	NextId int64
+}
+
+func NewPetStore() *PetStore {
+	return &PetStore{
+		Pets:   make(map[int64]models.Pet),
+		NextId: 1000,
+	}
+}
+
+// type Handler struct {}
+type Handler struct {
+	Lock   sync.Mutex
+	Pets   map[int64]models.Pet
+	NextId int64
+}
+
+//	func NewHandler() Handler {
+//		// pong := Pong{
+//		// 	Index:      1,
+//		// 	Message:    "Pong!",
+//		// 	ReceivedOn: time.Now(),
+//		// }
+//		handler := Handler{}
+//		return handler
+//	}
+func NewHandler() *Handler {
+	return &Handler{
+		Pets:   make(map[int64]models.Pet),
+		NextId: 1000,
+	}
 }
 
 // This function wraps sending of an error in the Error format, and
@@ -80,21 +117,116 @@ func (h *Handler) AitrailblazerServiceEcho(ctx echo.Context, message string, par
 	return ctx.JSON(http.StatusOK, echoMessage)
 }
 
-// (GET /v1/shelves/{shelf})
-func (h *Handler) AitrailblazerServiceGetShelf(ctx echo.Context, shelf int64) error {
+func (h *Handler) AitrailblazerServiceFindPetByID(ctx echo.Context, petId int64) error {
+	h.Lock.Lock()
+	defer h.Lock.Unlock()
 
-	log.Printf("AitrailblazerServiceGetShelf VERSION %s ", VERSION) // <3>
-
-	fmt.Println("AitrailblazerServiceGetShelf: shelf ", shelf)
-	i := shelf
-
-	theme := "My Bookshelf"
-	bookshelf := models.Shelf{
-		Id:    &i,
-		Theme: &theme,
+	pet, found := h.Pets[petId]
+	if !found {
+		return sendPetStoreError(ctx, http.StatusNotFound,
+			fmt.Sprintf("Could not find pet with ID %d", petId))
 	}
-	return ctx.JSON(http.StatusOK, bookshelf)
+	return ctx.JSON(http.StatusOK, pet)
 }
+
+func (h *Handler) AitrailblazerServiceDeletePet(ctx echo.Context, id int64) error {
+	h.Lock.Lock()
+	defer h.Lock.Unlock()
+
+	_, found := h.Pets[id]
+	if !found {
+		return sendPetStoreError(ctx, http.StatusNotFound,
+			fmt.Sprintf("Could not find pet with ID %d", id))
+	}
+	delete(h.Pets, id)
+	return ctx.NoContent(http.StatusNoContent)
+}
+
+// FindPets implements all the handlers in the ServerInterface
+func (h *Handler) AitrailblazerServiceFindPets(ctx echo.Context, params models.AitrailblazerServiceFindPetsParams) error {
+	h.Lock.Lock()
+	defer h.Lock.Unlock()
+
+	var result []models.Pet
+
+	for _, pet := range h.Pets {
+		if params.Tags != nil {
+			// If we have tags,  filter pets by tag
+			for _, t := range *params.Tags {
+				if pet.Tag != nil && (*pet.Tag == t) {
+					result = append(result, pet)
+				}
+			}
+		} else {
+			// Add all pets if we're not filtering
+			result = append(result, pet)
+		}
+
+		if params.Limit != nil {
+			l := int(*params.Limit)
+			if len(result) >= l {
+				// We're at the limit
+				break
+			}
+		}
+	}
+	return ctx.JSON(http.StatusOK, result)
+}
+
+func (h *Handler) AitrailblazerServiceAddPet(ctx echo.Context) error {
+	// We expect a NewPet object in the request body.
+	var newPet models.NewPet
+	err := ctx.Bind(&newPet)
+	if err != nil {
+		return sendPetStoreError(ctx, http.StatusBadRequest, "Invalid format for NewPet")
+	}
+	// We now have a pet, let's add it to our "database".
+
+	// We're always asynchronous, so lock unsafe operations below
+	h.Lock.Lock()
+	defer h.Lock.Unlock()
+
+	// We handle pets, not NewPets, which have an additional ID field
+	var pet models.Pet
+	pet.Name = newPet.Name
+	pet.Tag = newPet.Tag
+	pet.Id = &h.NextId
+	h.NextId = h.NextId + 1
+
+	// Insert into map
+	h.Pets[*pet.Id] = pet
+
+	// Now, we have to return the NewPet
+	err = ctx.JSON(http.StatusCreated, pet)
+	if err != nil {
+		// Something really bad happened, tell Echo that our handler failed
+		return err
+	}
+
+	// Return no error. This refers to the handler. Even if we return an HTTP
+	// error, but everything else is working properly, tell Echo that we serviced
+	// the error. We should only return errors from Echo handlers if the actual
+	// servicing of the error on the infrastructure level failed. Returning an
+	// HTTP/400 or HTTP/500 from here means Echo/HTTP are still working, so
+	// return nil.
+	return nil
+}
+
+// (GET /v1/shelves/{shelf})
+// func (h *Handler) AitrailblazerServiceGetShelf(ctx echo.Context, shelf int64) error {
+
+// 	log.Printf("AitrailblazerServiceGetShelf VERSION %s ", VERSION) // <3>
+
+// 	fmt.Println("AitrailblazerServiceGetShelf: shelf ", shelf)
+// 	i := shelf
+
+// 	theme := "My Bookshelf"
+// 	bookshelf := models.Shelf{
+// 		Id:    &i,
+// 		Theme: &theme,
+// 	}
+// 	return ctx.JSON(http.StatusOK, bookshelf)
+// }
 
 // (GET /v1/ping)
 // func (s *pingService) Send(ctx context.Context, req *pb.Request) (*pb.Response, error) {
