# docs/openapi.yaml
@@ -4,6 +4,7 @@
 openapi: 3.0.3
 info:
     title: AitrailblazerService API
+    description: This API represents ...
     version: 0.0.1
 paths:
     /echo/{message}:
@@ -34,6 +35,112 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /pets:
+        get:
+            tags:
+                - AitrailblazerService
+            description: "The FindPets RPC (Remote Procedure Call) allows \n a client to search for pets based on certain \n parameters. The parameters include tags \n (such as breed, color, etc.) and a limit on the \n number of pets to be returned. The RPC uses a \n GET HTTP request to the \"/pets\" endpoint to \n retrieve the desired pets. The result of the \n RPC is a Pet message, which contains information \n about the found pets."
+            operationId: AitrailblazerService_FindPets
+            parameters:
+                - name: tags
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
+                - name: limit
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Pet'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        post:
+            tags:
+                - AitrailblazerService
+            description: "The AddPet RPC allows for the addition of a new \n pet to the system. It takes in AddPetParameters \n as input, which includes a NewPet message that \n contains the name and tag of the new pet. \n The RPC returns a Pet message, which likely \n includes information about the newly added pet. \n The RPC can be accessed via an HTTP POST request \n to the \"/pets\" endpoint, with the new pet \n information being sent in the body of the request."
+            operationId: AitrailblazerService_AddPet
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/NewPet'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Pet'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /pets/{id}:
+        get:
+            tags:
+                - AitrailblazerService
+            description: "This is a function signature for a Remote Procedure Call (RPC) in the Google API specification language. The function is called \"FindPetByID\" and it takes in a single input parameter called \"FindPetByIDParameters\". The function returns a single output of type \"Pet\".\n \n The \"option\" statement specifies additional options for the function, in this case specifying that the function can be called using an HTTP GET request to the URL \"/pets/{id}\", where \"{id}\" is a placeholder for a specific pet ID.\n \n This function allows a client to retrieve information about a specific pet by providing the pet's ID as a parameter in the HTTP request.\n \n Returns a pet by ID"
+            operationId: AitrailblazerService_FindPetByID
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Pet'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        delete:
+            tags:
+                - AitrailblazerService
+            description: "The DeletePet RPC (Remote Procedure Call) is used \n to delete a pet from a database. It takes in a\n  DeletePetParameters message as input, which \n contains the ID of the pet to be deleted. \n The RPC returns an Error message, which includes \n a code and a message describing any errors that \n may have occurred during the delete operation. \n The RPC uses the HTTP DELETE method to delete \n the pet from the database, with the ID of the \n pet being specified in the URL as a path parameter."
+            operationId: AitrailblazerService_DeletePet
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /v1/ping:
         get:
             tags:
@@ -58,46 +165,20 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/shelves/{shelf}:
-        get:
-            tags:
-                - AitrailblazerService
-            description: |-
-                rpc GetBook(GetBookRequest) returns (Book) {
-                   option (google.api.http) = {
-                     get: "/v1/{name=publishers/*/books/*}"
-                   };
-                   option (google.api.method_signature) = "name";
-                 }
-                  Returns a specific bookstore shelf.
-            operationId: AitrailblazerService_GetShelf
-            parameters:
-                - name: shelf
-                  in: path
-                  description: The ID of the shelf resource to retrieve.
-                  required: true
-                  schema:
-                    type: integer
-                    format: int64
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Shelf'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         EchoMessage:
             type: object
             properties:
                 value:
+                    type: string
+        Error:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
                     type: string
         GoogleProtobufAny:
             type: object
@@ -107,6 +188,28 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        NewPet:
+            type: object
+            properties:
+                name:
+                    type: string
+                tag:
+                    type: string
+            description: The NewPet message contains information about a  new pet being added to the system. It includes  the name of the pet (a string) and a tag  (also a string) that can be used to identify  the pet. This message is used as the "new_pet"  field in the AddPetParameters message, which is  passed as input to the AddPet RPC.
+        Pet:
+            type: object
+            properties:
+                name:
+                    type: string
+                    description: The name of the pet
+                tag:
+                    type: string
+                    description: The tag of the pet
+                id:
+                    type: integer
+                    description: The id of the pet
+                    format: int64
+            description: 'The message Pet is a data structure that  represents a pet in this gRPC function.  It has three fields: name, tag, and id.  The name field is a string that represents  the name of the pet. The tag field is a  string that represents a tag or label  associated with the pet. The id field  is an integer that represents a unique  identifier for the pet. These three  fields are defined as required fields,  meaning that they must be provided when  creating a new Pet object.'
         PingResponse:
             type: object
             properties:
@@ -125,17 +228,6 @@ components:
                 receivedOn:
                     type: string
                     format: date-time
-        Shelf:
-            type: object
-            properties:
-                id:
-                    type: integer
-                    description: A unique shelf id.
-                    format: int64
-                theme:
-                    type: string
-                    description: A theme of the shelf (fiction, poetry, etc).
-            description: A shelf resource.
         Status:
             type: object
             properties:
